<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/priceChooseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".activities.PriceChooseActivity">

    <Button
        android:id="@+id/maxPriceButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:onClick="maxPriceAction"
        android:text="@string/max_price_name"
        android:textColorLink="@color/chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/minPriceButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="minPriceAction"
        android:text="@string/min_price_name"
        android:textColorLink="@color/chocolate"
        app:layout_constraintBottom_toTopOf="@+id/allVariantsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/allVariantsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:onClick="allVariantsAction"
        android:text="все варианты"
        android:textColorLink="@color/chocolate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <include
        layout="@layout/header_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_main_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/backButtonChoose"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginBottom="75dp"
        android:onClick="onClickBackActionChoose"
        android:text="@string/back_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>